# cp4-halims

./: .gitignore  CMakeLists.txt
1/4/a/: 1. Kattis - hello.cpp  5. Kattis - carrots.cpp  6. Kattis - r2.cpp  7. Kattis - thelastproblem.cpp
1/4/b/: 1. Kattis - timeloop.cpp  5. Kattis - different.cpp  6. Kattis - qaly.cpp  7. Kattis - tarifa.cpp
1/4/c/: 1. Kattis - moscowdream.cpp  2. Kattis - isithalloween.cpp  3. Kattis - judgingmoose.cpp  4. Kattis - onechicken.cpp  5. Kattis - provincesandgold.cpp  6. Kattis - quadrant.cpp  7. Kattis - temperature.cpp
1/4/d/: 1. Kattis - oddities.cpp  5. Kattis - eligibility.cpp  6. Kattis - helpaphd.cpp  7. Kattis - leftbeehind.cpp
1/4/e/: 1. Kattis - statistics.cpp  5. Kattis - fizzbuzz.cpp  6. Kattis - licensetolaunch.cpp  7. Kattis - oddgnome.cpp
1/4/f/: 1. Kattis - mia.cpp
