cmake_minimum_required(VERSION 3.26)
project(cp4_halims)

set(CMAKE_CXX_STANDARD 14)

add_executable(cp4_halims
        "1/4/a/1. Kattis - hello.cpp"
        "1/4/a/5. Kattis - carrots.cpp"
        "1/4/a/6. Kattis - r2.cpp"
        "1/4/a/7. Kattis - thelastproblem.cpp"
        "1/4/b/1. Kattis - timeloop.cpp"
        "1/4/b/5. Kattis - different.cpp"
        "1/4/b/6. Kattis - qaly.cpp"
        "1/4/b/7. Kattis - tarifa.cpp"
        "1/4/c/1. Kattis - moscowdream.cpp"
        "1/4/c/2. Kattis - isithalloween.cpp"
        "1/4/c/3. Kattis - judgingmoose.cpp"
        "1/4/c/4. Kattis - onechicken.cpp"
        "1/4/c/5. Kattis - provincesandgold.cpp"
        "1/4/c/6. Kattis - quadrant.cpp"
        "1/4/c/7. Kattis - temperature.cpp"
        "1/4/d/1. Kattis - oddities.cpp"
        "1/4/d/5. Kattis - eligibility.cpp"
        "1/4/d/6. Kattis - helpaphd.cpp"
        "1/4/d/7. Kattis - leftbeehind.cpp"
        "1/4/e/1. Kattis - statistics.cpp"
        "1/4/e/5. Kattis - fizzbuzz.cpp"
        "1/4/e/6. Kattis - licensetolaunch.cpp"
        "1/4/e/7. Kattis - oddgnome.cpp"
        "1/4/f/1. Kattis - mia.cpp"
        "1/4/f/5. Kattis - artichoke.cpp"
        "1/4/f/6. Kattis - digits.cpp"
        "1/4/f/7. Kattis - filip.cpp"
        "1/4/g/1. Kattis - lostlineup.cpp"
        "1/4/g/5. Kattis - acm.cpp"
        "1/4/g/6. Kattis - cetiri.cpp"
        "1/4/g/7. Kattis - lineup.cpp"
        "1/4/h/1. Kattis - hissingmicrophone.cpp"
        "1/4/h/5. Kattis - batterup.cpp"
        "1/4/h/6. Kattis - hangingout.cpp"
        "1/4/h/7. Kattis - pokerhand.cpp"
        "1/4/i/1. Kattis - bubbletea.cpp"
        "1/4/i/5. Kattis - bossbattle.cpp"
        "1/4/i/6. Kattis - peasoup.cpp"
        "1/4/i/7. Kattis - vote.cpp"
        "1/4/j/1. Kattis - basicprogramming1.cpp"
        "1/4/j/5. Kattis - battlesimulation.cpp"
        "1/4/j/6. Kattis - bitsequalizer.cpp"
        "1/4/j/7. Kattis - fastfood.cpp"
        "1/6/a/5. Kattis - bela.cpp"
        "1/6/a/6. Kattis - shuffling.cpp"
        "1/6/a/7. Kattis - memorymatch.cpp"
        "1/6/b/5. Kattis - chess.cpp"
        "1/6/b/6. Kattis - empleh.cpp"
        "1/6/b/7. Kattis - helpme.cpp"
        "1/6/c/5. Kattis - connectthedots.cpp"
        "1/6/c/6. Kattis - gamerank.cpp"
        "1/6/c/7. Kattis - guessinggame.cpp"
        "1/6/d/1. Kattis - rockpaperscissors.cpp"
        "1/6/d/5. Kattis - battleship.cpp"
        "1/6/d/6. Kattis - tictactoe2.cpp"
        "1/6/d/7. Kattis - turtlemaster.cpp"
        "1/6/e/1. Kattis - wertyu.cpp"
        "1/6/e/5. Kattis - chopin.cpp"
        "1/6/e/6. Kattis - compass.cpp"
        "1/6/e/7. Kattis - trainpassengers.cpp"
        "1/6/f/1. Kattis - luhnchecksum.cpp"
        "1/6/f/5. Kattis - beatspread.cpp"
        "1/6/f/6. Kattis - toilet.cpp"
        "1/6/f/7. Kattis - wordcloud.cpp"
        "1/6/g/5. Kattis - creditcard.cpp"
        "1/6/g/6. Kattis - touchscreenkeyboard.cpp"
        "1/6/g/7. Kattis - workout.cpp"
        "1/6/h/1. Kattis - marswindow.cpp"
        "1/6/h/5. Kattis - friday.cpp"
        "1/6/h/6. Kattis - justaminute.cpp"
        "1/6/h/7. Kattis - savingdaylight.cpp"
        "1/6/i/1. Kattis - timezones.cpp"
        "1/6/i/5. Kattis - bestbefore.cpp"
        "1/6/i/6. Kattis - birthdayboy.cpp"
        "1/6/i/7. Kattis - natrij.cpp"
        "1/6/j/6. Kattis - rimski.cpp"
        "1/6/j/7. Kattis - romanholidays.cpp"
        "1/6/k/5. Kattis - conundrum.cpp"
        "1/6/k/6. Kattis - encodedmessage.cpp"
        "1/6/k/7. Kattis - t9spelling.cpp"
        "1/6/l/1. Kattis - secretmessage.cpp"
        "1/6/l/5. Kattis - anewalphabet.cpp"
        "1/6/l/6. Kattis - piglatin.cpp"
        "1/6/l/7. Kattis - tajna.cpp"
        "1/6/m/5. Kattis - autori.cpp"
        "1/6/m/6. Kattis - pervasiveheartmonitor.cpp"
        "1/6/m/7. Kattis - timebomb.cpp"
        "1/6/n/5. Kattis - display.cpp"
        "1/6/n/6. Kattis - musicalnotation.cpp"
        "1/6/n/7. Kattis - skener.cpp"
        "1/6/o/1. Kattis - asciiaddition.cpp"
        "1/6/o/5. Kattis - glitchbot.cpp"
        "1/6/o/6. Kattis - pachydermpeanutpacking.cpp"
        "1/6/o/7. Kattis - printingcosts.cpp"
        "1/6/p/5. Kattis - froggie.cpp"
        "1/6/p/6. Kattis - functionalfun.cpp"
        "1/6/p/7. Kattis - windows.cpp"
        "2/2/a/1. Kattis - jollyjumpers.cpp"
        "2/2/a/5. Kattis - baloni.cpp"
        "2/2/a/6. Kattis - downtime.cpp"
        "2/2/a/7. Kattis - greedilyincreasing.cpp"
        "2/2/b/5. Kattis - divideby100.cpp"
        "2/2/b/6. Kattis - mastermind.cpp"
        "2/2/b/7. Kattis - pivot.cpp"
        "2/2/c/1. Kattis - epigdanceoff.cpp"
        "2/2/c/5. Kattis - flowshop.cpp"
        "2/2/c/6. Kattis - imageprocessing.cpp"
        "2/2/c/7. Kattis - nineknights.cpp"
        "2/2/d/1. Kattis - 2048.cpp"
        "2/2/d/5. Kattis - flagquiz.cpp"
        "2/2/d/6. Kattis - funhouse.cpp"
        "2/2/d/7. Kattis - rings2.cpp"
        "2/2/e/1. Kattis - basicprogramming2.cpp"
        "2/2/e/5. Kattis - height.cpp"
        "2/2/e/6. Kattis - mjehuric.cpp"
        "2/2/e/7. Kattis - sidewayssorting.cpp"
        "2/2/f/1. Kattis - sortofsorting.cpp"
        "2/2/f/5. Kattis - classy.cpp"
        "2/2/f/6. Kattis - dyslectionary.cpp"
        "2/2/f/7. Kattis - musicyourway.cpp"
        "2/2/g/5. Kattis - bread.cpp"
        "2/2/g/6. Kattis - magicsequence.cpp"
        "2/2/g/7. Kattis - mali.cpp"
        "2/2/h/5. Kattis - bitbybit.cpp"
        "2/2/h/6. Kattis - deathstar.cpp"
        "2/2/h/7. Kattis - snapperhard.cpp"
        "2/2/i/5. Kattis - primaryarithmetic.cpp"
        "2/2/i/6. Kattis - simpleaddition.cpp"
        "2/2/i/7. Kattis - wizardofodds.cpp"
        "2/2/j/1. Kattis - evenup.cpp"
        "2/2/j/5. Kattis - pairingsocks.cpp"
        "2/2/j/6. Kattis - restaurant.cpp"
        "2/2/j/7. Kattis - throwns.cpp"
        "2/2/k/5. Kattis - bungeebuilder.cpp"
        "2/2/k/6. Kattis - circuitmath.cpp"
        "2/2/k/7. Kattis - delimitersoup.cpp"
        "2/2/l/1. Kattis - joinstrings.cpp"
        "2/2/l/5. Kattis - integerlists.cpp"
        "2/2/l/6. Kattis - sim.cpp"
        "2/2/l/7. Kattis - teque.cpp"
        "2/3/a/1. Kattis - numbertree.cpp"
        "2/3/a/5. Kattis - jugglingpatterns.cpp"
        "2/3/a/6. Kattis - knigsoftheforest.cpp"
        "2/3/a/7. Kattis - stockprices.cpp"
        "2/3/b/6. Kattis - alphabetspam.cpp"
        "2/3/b/7. Kattis - quickbrownfox.cpp"
        "2/3/c/5. Kattis - bookingaroom.cpp"
        "2/3/c/6. Kattis - busnumbers.cpp"
        "2/3/c/7. Kattis - freefood.cpp"
        "2/3/d/1. Kattis - cd.cpp"
        "2/3/d/5. Kattis - esej.cpp"
        "2/3/d/6. Kattis - greetingcard.cpp"
        "2/3/d/7. Kattis - shiritori.cpp"
        "2/3/e/1. Kattis - recount.cpp"
        "2/3/e/5. Kattis - competitivearcadebasketball.cpp"
        "2/3/e/6. Kattis - conformity.cpp"
        "2/3/e/7. Kattis - grandpabernie.cpp"
        "2/3/f/1. Kattis - conversationlog.cpp"
        "2/3/f/5. Kattis - addingwords.cpp"
        "2/3/f/6. Kattis - awkwardparty.cpp"
        "2/3/f/7. Kattis - basicinterpreter.cpp"
        "2/3/g/5. Kattis - bst.cpp"
        "2/3/g/6. Kattis - candydivision.cpp"
        "2/3/g/7. Kattis - compoundwords.cpp"
        "2/3/h/1. Kattis - doctorkattis.cpp"
        "2/3/h/5. Kattis - administrativeproblems.cpp"
        "2/3/h/6. Kattis - kattissquest.cpp"
        "2/3/h/7. Kattis - srednji.cpp"
        "2/3/i/2. Kattis - babynames.cpp"
        "2/3/i/3. Kattis - continuousmedian.cpp"
        "2/3/i/4. Kattis - cookieselection.cpp"
        "2/3/i/5. Kattis - gcpc.cpp"
        "2/4/a/5. Kattis - abinitio.cpp"
        "2/4/a/6. Kattis - chopwood.cpp"
        "2/4/a/7. Kattis - traveltheskies.cpp"
        "2/4/b/1. Kattis - unionfind.cpp"
        "2/4/b/5. Kattis - control.cpp"
        "2/4/b/6. Kattis - ladice.cpp"
        "2/4/b/7. Kattis - almostunionfind.cpp"
        "2/4/c/1. Kattis - fenwick.cpp"
        "2/4/c/5. Kattis - justforsidekicks.cpp"
        "2/4/c/6. Kattis - moviecollection.cpp"
        "2/4/c/7. Kattis - supercomputer.cpp"
        "3/2/a/5. Kattis - cardtrick2.cpp"
        "3/2/a/6. Kattis - foolingaround.cpp"
        "3/2/a/7. Kattis - sgcoin.cpp"
        "3/2/b/1. Kattis - pet.cpp"
        "3/2/b/5. Kattis - blackfriday.cpp"
        "3/2/b/6. Kattis - closestsums.cpp"
        "3/2/b/7. Kattis - golombrulers.cpp"
        "3/2/c/5. Kattis - cudoviste.cpp"
        "3/2/c/6. Kattis - npuzzle.cpp"
        "3/2/c/7. Kattis - set.cpp"
        "3/2/d/5. Kattis - calculatingdartscores.cpp"
        "3/2/d/6. Kattis - lektira.cpp"
        "3/2/d/7. Kattis - tautology.cpp"
        "3/2/e/5. Kattis - dancerecital.cpp"
        "3/2/e/6. Kattis - dreamer.cpp"
        "3/2/e/7. Kattis - veci.cpp"
        "3/2/f/5. Kattis - geppetto.cpp"
        "3/2/f/6. Kattis - squaredeal.cpp"
        "3/2/f/7. Kattis - zagrade.cpp"
        "3/2/g/1. Kattis - flexible.cpp"
        "3/2/g/5. Kattis - communication.cpp"
        "3/2/g/6. Kattis - islands.cpp"
        "3/2/g/7. Kattis - walls.cpp"
        "3/2/h/1. Kattis - easiest.cpp"
        "3/2/h/5. Kattis - growlinggears.cpp"
        "3/2/h/6. Kattis - trollhunt.cpp"
        "3/2/h/7. Kattis - videospeedup.cpp"
        "3/2/i/5. Kattis - crackingrsa.cpp"
        "3/2/i/6. Kattis - falling.cpp"
        "3/2/i/7. Kattis - thanosthehero.cpp"
        "3/2/j/5. Kattis - eenymeeny.cpp"
        "3/2/j/6. Kattis - musicalchairs.cpp"
        "3/2/j/7. Kattis - toys.cpp"
        "3/2/k/5. Kattis - goodmorning.cpp"
        "3/2/k/6. Kattis - natjecanje.cpp"
        "3/2/k/7. Kattis - paintings.cpp"
        "3/2/l/5. Kattis - dobra.cpp"
        "3/2/l/6. Kattis - fruitbaskets.cpp"
        "3/2/l/7. Kattis - pagelayout.cpp"
        "3/3/a/5. Kattis - firefly.cpp"
        "3/3/a/6. Kattis - outofsorts.cpp"
        "3/3/a/7. Kattis - roompainting.cpp"
        "3/3/b/1. Kattis - carefulascent.cpp"
        "3/3/b/5. Kattis - freeweights.cpp"
        "3/3/b/6. Kattis - monk.cpp"
        "3/3/b/7. Kattis - suspensionbridges.cpp"
        "3/3/c/5. Kattis - a1paper.cpp"
        "3/3/c/6. Kattis - ceiling.cpp"
        "3/3/c/7. Kattis - goingtoseed.cpp"
        "3/4/a/5. Kattis - classrooms.cpp"
        "3/4/a/6. Kattis - froshweek2.cpp"
        "3/4/a/7. Kattis - squarepegs.cpp"
        "3/4/b/5. Kattis - icpcteamselection.cpp"
        "3/4/b/6. Kattis - minimumscalar.cpp"
        "3/4/b/7. Kattis - shopaholic.cpp"
        "3/4/c/5. Kattis - airconditioned.cpp"
        "3/4/c/6. Kattis - birds.cpp"
        "3/4/c/7. Kattis - delivery.cpp"
        "3/4/d/1. Kattis - ballotboxes.cpp"
        "3/4/d/5. Kattis - canvas.cpp"
        "3/4/d/6. Kattis - vegetables.cpp"
        "3/4/d/7. Kattis - workstations.cpp"
        "3/4/e/5. Kattis - ants.cpp"
        "3/4/e/6. Kattis - bank.cpp"
        "3/4/e/7. Kattis - marblestree.cpp"
        "3/4/f/5. Kattis - dvds.cpp"
        "3/4/f/6. Kattis - stockbroker.cpp"
        "3/4/f/7. Kattis - virus.cpp"
        "3/5/a/5. Kattis - commercials.cpp"
        "3/5/a/6. Kattis - prozor.cpp"
        "3/5/a/7. Kattis - sellingspatulas.cpp"
        "3/5/b/5. Kattis - increasingsubsequence.cpp"
        "3/5/b/6. Kattis - nesteddolls.cpp"
        "3/5/b/7. Kattis - trainsorting.cpp"
        "3/5/c/5. Kattis - knapsack.cpp"
        "3/5/c/6. Kattis - orders.cpp"
        "3/5/c/7. Kattis - presidentialelections.cpp"
        "3/5/d/5. Kattis - bagoftiles.cpp"
        "3/5/d/6. Kattis - canonical.cpp"
        "3/5/d/7. Kattis - exactchange2.cpp"
        "3/5/e/1. Kattis - beepers.cpp"
        "3/5/e/5. Kattis - bustour.cpp"
        "3/5/e/6. Kattis - cycleseasy.cpp"
        "3/5/e/7. Kattis - errands.cpp"
        "3/5/f/5. Kattis - nikola.cpp"
        "3/5/f/6. Kattis - spiderman.cpp"
        "3/5/f/7. Kattis - ticketpricing.cpp"
        "3/5/g/5. Kattis - kutevi.cpp"
        "3/5/g/6. Kattis - tight.cpp"
        "3/5/g/7. Kattis - walrusweights.cpp"
        "4/2/a/1. Kattis - wheresmyinternet.cpp"
        "4/2/a/5. Kattis - dominoes2.cpp"
        "4/2/a/6. Kattis - reachableroads.cpp"
        "4/2/a/7. Kattis - terraces.cpp"
        "4/2/b/5. Kattis - amoebas.cpp"
        "4/2/b/6. Kattis - countingstars.cpp"
        "4/2/b/7. Kattis - gold.cpp"
        "4/2/c/5. Kattis - 10kindsofpeople.cpp"
        "4/2/c/6. Kattis - coast.cpp"
        "4/2/c/7. Kattis - islands3.cpp"
        "4/2/d/1. Kattis - builddeps.cpp"
        "4/2/d/5. Kattis - brexit.cpp"
        "4/2/d/6. Kattis - conservation.cpp"
        "4/2/d/7. Kattis - pickupsticks.cpp"
        "4/2/e/1. Kattis - runningmom.cpp"
        "4/2/e/5. Kattis - hoppers.cpp"
        "4/2/e/6. Kattis - molekule.cpp"
        "4/2/e/7. Kattis - torn2pieces.cpp"
        "4/2/f/5. Kattis - birthday.cpp"
        "4/2/f/6. Kattis - caveexploration.cpp"
        "4/2/f/7. Kattis - intercept.cpp"
        "4/2/g/5. Kattis - cantinaofbabel.cpp"
        "4/2/g/6. Kattis - dominos.cpp"
        "4/2/g/7. Kattis - equivalences.cpp"
        "4/2/h/5. Kattis - faultyrobot.cpp"
        "4/2/h/6. Kattis - promotions.cpp"
        "4/2/h/7. Kattis - succession.cpp"
        "4/3/a/1. Kattis - islandhopping.cpp"
        "4/3/a/5. Kattis - cats.cpp"
        "4/3/a/6. Kattis - lostmap.cpp"
        "4/3/a/7. Kattis - minspantree.cpp"
        "4/3/b/5. Kattis - millionairemadness.cpp"
        "4/3/b/6. Kattis - muddyhike.cpp"
        "4/3/b/7. Kattis - naturereserve.cpp"
        "4/4/a/5. Kattis - buttonbashing.cpp"
        "4/4/a/6. Kattis - grid.cpp"
        "4/4/a/7. Kattis - horror.cpp"
        "4/4/b/1. Kattis - lost.cpp"
        "4/4/b/5. Kattis - fire2.cpp"
        "4/4/b/6. Kattis - mallmania.cpp"
        "4/4/b/7. Kattis - oceancurrents.cpp"
        "4/4/c/5. Kattis - grasshopper.cpp"
        "4/4/c/6. Kattis - hidingplaces.cpp"
        "4/4/c/7. Kattis - knightjump.cpp"
        "4/4/d/1. Kattis - shortestpath1.cpp"
        "4/4/d/5. Kattis - flowerytrails.cpp"
        "4/4/d/6. Kattis - shortestpath2.cpp"
        "4/4/d/7. Kattis - texassummers.cpp"
        "4/4/e/5. Kattis - blockcrusher.cpp"
        "4/4/e/6. Kattis - emptyingbaltic.cpp"
        "4/4/e/7. Kattis - invasion.cpp"
        "4/4/f/5. Kattis - hauntedgraveyard.cpp"
        "4/4/f/6. Kattis - shortestpath3.cpp"
        "4/4/f/7. Kattis - xyzzy.cpp"
        "4/5/a/5. Kattis - allpairspath.cpp"
        "4/5/a/6. Kattis - importspaghetti.cpp"
        "4/5/a/7. Kattis - transportationplanning.cpp"
        "4/5/b/5. Kattis - arbitrage.cpp"
        "4/5/b/6. Kattis - kastenlauf.cpp"
        "4/5/b/7. Kattis - secretchamber.cpp"
        "4/6/a/5. Kattis - 246greaaat.cpp"
        "4/6/a/6. Kattis - fibtour.cpp"
        "4/6/a/7. Kattis - safepassage.cpp"
        "4/6/b/5. Kattis - robotsonagrid.cpp"
        "4/6/b/6. Kattis - runningsteps.cpp"
        "4/6/b/7. Kattis - scenes.cpp"
        "4/6/c/5. Kattis - cardmagic.cpp"
        "4/6/c/6. Kattis - drinkresponsibly.cpp"
        "4/6/c/7. Kattis - maximizingwinnings.cpp"
        "4/6/d/5. Kattis - adjoin.cpp"
        "4/6/d/6. Kattis - flight.cpp"
        "4/6/d/7. Kattis - tourists.cpp"
        "4/6/e/5. Kattis - bookclub.cpp"
        "4/6/e/6. Kattis - escapeplan.cpp"
        "4/6/e/7. Kattis - flippingcards.cpp"
        "4/6/f/5. Kattis - catenyms.cpp"
        "4/6/f/6. Kattis - eulerianpath.cpp"
        "4/6/f/7. Kattis - railroad2.cpp"
        "5/2/a/5. Kattis - averageshard.cpp"
        "5/2/a/6. Kattis - bishops.cpp"
        "5/2/a/7. Kattis - crne.cpp"
        "5/2/b/5. Kattis - mortgage.cpp"
        "5/2/b/6. Kattis - neighborhoodwatch.cpp"
        "5/2/b/7. Kattis - nine.cpp"
        "5/2/c/1. Kattis - basicremains.cpp"
        "5/2/c/5. Kattis - arithmetic.cpp"
        "5/2/c/6. Kattis - allaboutthatbase.cpp"
        "5/2/c/7. Kattis - oktalni.cpp"
        "5/2/d/5. Kattis - aliennumbers.cpp"
        "5/2/d/6. Kattis - ignore.cpp"
        "5/2/d/7. Kattis - mixedbasearithmetic.cpp"
        "5/2/e/1. Kattis - collatz.cpp"
        "5/2/e/5. Kattis - candlebox.cpp"
        "5/2/e/6. Kattis - permutedarithmeticsequence.cpp"
        "5/2/e/7. Kattis - rationalsequence.cpp"
        "5/2/f/5. Kattis - cokolada.cpp"
        "5/2/f/6. Kattis - factstone.cpp"
        "5/2/f/7. Kattis - thebackslashproblem.cpp"
        "5/2/g/5. Kattis - beehouseperimeter.cpp"
        "5/2/g/6. Kattis - honeyheist.cpp"
        "5/2/g/7. Kattis - maptiles2.cpp"
        "5/2/h/5. Kattis - ada.cpp"
        "5/2/h/6. Kattis - curvyblocks.cpp"
        "5/2/h/7. Kattis - plot.cpp"
        "5/2/i/1. Kattis - mixedfractions.cpp"
        "5/2/i/5. Kattis - deadfraction.cpp"
        "5/2/i/6. Kattis - fraction.cpp"
        "5/2/i/7. Kattis - thermostat.cpp"
        "5/2/j/5. Kattis - matrix.cpp"
        "5/2/j/6. Kattis - trip.cpp"
        "5/2/j/7. Kattis - yoda.cpp"
        "5/3/a/5. Kattis - enlarginghashtables.cpp"
        "5/3/a/6. Kattis - primesieve.cpp"
        "5/3/a/7. Kattis - reseto.cpp"
        "5/3/b/1. Kattis - pseudoprime.cpp"
        "5/3/b/5. Kattis - flowergarden.cpp"
        "5/3/b/6. Kattis - goldbach2.cpp"
        "5/3/b/7. Kattis - primes2.cpp"
        "5/3/c/5. Kattis - pascal.cpp"
        "5/3/c/6. Kattis - primalrepresentation.cpp"
        "5/3/c/7. Kattis - primereduction.cpp"
        "5/3/d/5. Kattis - almostperfect.cpp"
        "5/3/d/6. Kattis - divisors.cpp"
        "5/3/d/7. Kattis - relatives.cpp"
        "5/3/e/5. Kattis - data.cpp"
        "5/3/e/6. Kattis - farey.cpp"
        "5/3/e/7. Kattis - nonprimefactors.cpp"
        "5/3/f/5. Kattis - prsteni.cpp"
        "5/3/f/6. Kattis - jackpot.cpp"
        "5/3/f/7. Kattis - smallestmultiple.cpp"
        "5/3/g/1. Kattis - tutorial.cpp"
        "5/3/g/5. Kattis - inversefactorial.cpp"
        "5/3/g/6. Kattis - loworderzeros.cpp"
        "5/3/g/7. Kattis - namethatpermutation.cpp"
        "5/3/h/1. Kattis - factovisors.cpp"
        "5/3/h/5. Kattis - consecutivesums.cpp"
        "5/3/h/6. Kattis - fundamentalneighbors.cpp"
        "5/3/h/7. Kattis - iks.cpp"
        "5/3/i/5. Kattis - anothercandies.cpp"
        "5/3/i/6. Kattis - ones.cpp"
        "5/3/i/7. Kattis - threedigits.cpp"
        "5/3/j/5. Kattis - candydistribution.cpp"
        "5/3/j/6. Kattis - modulararithmetic.cpp"
        "5/3/j/7. Kattis - soyoulikeyourfoodhot.cpp"
        "5/3/k/5. Kattis - divisible.cpp"
        "5/3/k/6. Kattis - meowfactor.cpp"
        "5/3/k/7. Kattis - thinkingofanumber.cpp"
        "5/4/a/5. Kattis - anti11.cpp"
        "5/4/a/6. Kattis - batmanacci.cpp"
        "5/4/a/7. Kattis - rijeci.cpp"
        "5/4/b/5. Kattis - election.cpp"
        "5/4/b/6. Kattis - lockedtreasure.cpp"
        "5/4/b/7. Kattis - oddbinom.cpp"
        "5/4/c/5. Kattis - catalan.cpp"
        "5/4/c/6. Kattis - catalansquare.cpp"
        "5/4/c/7. Kattis - fiat.cpp"
        "5/4/d/5. Kattis - character.cpp"
        "5/4/d/6. Kattis - honey.cpp"
        "5/4/d/7. Kattis - integerdivision.cpp"
        "5/4/e/5. Kattis - anagramcounting.cpp"
        "5/4/e/6. Kattis - incognito.cpp"
        "5/4/e/7. Kattis - tritiling.cpp"
        "5/5/a/5. Kattis - bobby.cpp"
        "5/5/a/6. Kattis - dicebetting.cpp"
        "5/5/a/7. Kattis - odds.cpp"
        "5/5/b/5. Kattis - anthony.cpp"
        "5/5/b/6. Kattis - goodcoalition.cpp"
        "5/5/b/7. Kattis - lostinthewoods.cpp"
        "5/6/a/5. Kattis - dragondropped.cpp"
        "5/6/a/6. Kattis - fibonaccicycles.cpp"
        "5/6/a/7. Kattis - rats.cpp"
        "5/7/a/1. Kattis - euclidsgame.cpp"
        "5/7/a/5. Kattis - bachetsgame.cpp"
        "5/7/a/6. Kattis - blockgame2.cpp"
        "5/7/a/7. Kattis - linije.cpp"
        "5/8/a/5. Kattis - checkingforcorrectness.cpp"
        "5/8/a/6. Kattis - porpoises.cpp"
        "5/8/a/7. Kattis - squawk.cpp"
        "6/2/a/1. Kattis - itsasecret.cpp"
        "6/2/a/5. Kattis - crackingthecode.cpp"
        "6/2/a/6. Kattis - playfair.cpp"
        "6/2/a/7. Kattis - textencryption.cpp"
        "6/2/b/1. Kattis - polish.cpp"
        "6/2/b/5. Kattis - calculator.cpp"
        "6/2/b/6. Kattis - otpor.cpp"
        "6/2/b/7. Kattis - subexpression.cpp"
        "6/2/c/5. Kattis - apaxiaaans.cpp"
        "6/2/c/6. Kattis - hidden.cpp"
        "6/2/c/7. Kattis - lindenmayorsystem.cpp"
        "6/2/d/1. Kattis - imagedecoding.cpp"
        "6/2/d/5. Kattis - asciifigurerotation.cpp"
        "6/2/d/6. Kattis - juryjeopardy.cpp"
        "6/2/d/7. Kattis - nizovi.cpp"
        "6/2/e/5. Kattis - phonelist.cpp"
        "6/2/e/6. Kattis - rhyming.cpp"
        "6/2/e/7. Kattis - smartphone.cpp"
        "6/2/f/1. Kattis - raggedright.cpp"
        "6/2/f/5. Kattis - irepeatmyself.cpp"
        "6/2/f/6. Kattis - periodicstrings.cpp"
        "6/2/f/7. Kattis - zipfslaw.cpp"
        "6/3/a/5. Kattis - inflagrantedelicto.cpp"
        "6/3/a/6. Kattis - pandachess.cpp"
        "6/3/a/7. Kattis - princeandprincess.cpp"
        "6/3/b/1. Kattis - stringfactoring.cpp"
        "6/3/b/5. Kattis - exam.cpp"
        "6/3/b/6. Kattis - heritage.cpp"
        "6/3/b/7. Kattis - hillnumbers.cpp"
        "6/4/a/1. Kattis - quiteaproblem.cpp"
        "6/4/a/5. Kattis - geneticsearch.cpp"
        "6/4/a/6. Kattis - powerstrings.cpp"
        "6/4/a/7. Kattis - scrollingsign.cpp"
        "6/4/b/5. Kattis - boggle.cpp"
        "6/4/b/6. Kattis - kinarow.cpp"
        "6/4/b/7. Kattis - knightsearch.cpp"
        "6/5/a/1. Kattis - suffixsorting.cpp"
        "6/5/a/5. Kattis - automatictrading.cpp"
        "6/5/a/6. Kattis - buzzwords.cpp"
        "6/5/a/7. Kattis - suffixarrayreconstruction.cpp"
        "6/6/a/1. Kattis - stringmatching.cpp"
        "6/6/a/5. Kattis - animal.cpp"
        "6/6/a/6. Kattis - hashing.cpp"
        "6/6/a/7. Kattis - typo.cpp"
        "6/7/a/6. Kattis - multigram.cpp"
        "6/7/a/7. Kattis - substringswitcheroo.cpp"
        "6/7/b/5. Kattis - kaleidoscopicpalindromes.cpp"
        "6/7/b/6. Kattis - palindromesubstring.cpp"
        "6/7/b/7. Kattis - peragrams.cpp"
        "6/7/c/5. Kattis - evilstraw.cpp"
        "6/7/c/6. Kattis - makingpalindromes.cpp"
        "6/7/c/7. Kattis - names.cpp"
        "7/2/a/5. Kattis - browniepoints.cpp"
        "7/2/a/6. Kattis - cursethedarkness.cpp"
        "7/2/a/7. Kattis - imperfectgps.cpp"
        "7/2/b/1. Kattis - unlockpattern.cpp"
        "7/2/b/5. Kattis - hurricanedanger.cpp"
        "7/2/b/6. Kattis - logo2.cpp"
        "7/2/b/7. Kattis - platforme.cpp"
        "7/2/c/1. Kattis - estimatingtheareaofacircle.cpp"
        "7/2/c/5. Kattis - amsterdamdistance.cpp"
        "7/2/c/6. Kattis - biggest.cpp"
        "7/2/c/7. Kattis - ornaments.cpp"
        "7/2/d/1. Kattis - egypt.cpp"
        "7/2/d/5. Kattis - alldifferentdirections.cpp"
        "7/2/d/6. Kattis - billiard.cpp"
        "7/2/d/7. Kattis - mountainbiking.cpp"
        "7/2/e/5. Kattis - cropeasy.cpp"
        "7/2/e/6. Kattis - stickysituation.cpp"
        "7/2/e/7. Kattis - trilemma.cpp"
        "7/2/f/1. Kattis - cetvrta.cpp"
        "7/2/f/5. Kattis - officespace.cpp"
        "7/2/f/6. Kattis - rectanglesurrounding.cpp"
        "7/2/f/7. Kattis - roundedbuttons.cpp"
        "7/3/a/1. Kattis - convexpolygonarea.cpp"
        "7/3/a/5. Kattis - convexhull.cpp"
        "7/3/a/6. Kattis - cuttingcorners.cpp"
        "7/3/a/7. Kattis - robotprotection.cpp"
        "7/3/b/5. Kattis - convex.cpp"
        "7/3/b/6. Kattis - pointinpolygon.cpp"
        "7/3/b/7. Kattis - roberthood.cpp"
        "7/4/a/1. Kattis - beavergnaw.cpp"
        "7/4/a/5. Kattis - bottles.cpp"
        "7/4/a/6. Kattis - flowers.cpp"
        "7/4/a/7. Kattis - airlinehub.cpp"
        "8/2/a/5. Kattis - committeeassignment.cpp"
        "8/2/a/6. Kattis - holeynqueensbatman.cpp"
        "8/2/a/7. Kattis - greatswercporto.cpp"
        "8/2/b/5. Kattis - ecoins.cpp"
        "8/2/b/6. Kattis - flipfive.cpp"
        "8/2/b/7. Kattis - safe.cpp"
        "8/2/c/5. Kattis - keyboard.cpp"
        "8/2/c/6. Kattis - robotmaze.cpp"
        "8/2/c/7. Kattis - robotturtles.cpp"
        "8/2/d/5. Kattis - bumped.cpp"
        "8/2/d/6. Kattis - destinationunknown.cpp"
        "8/2/d/7. Kattis - justpassingthrough.cpp"
        "8/3/a/5. Kattis - aspenavenue.cpp"
        "8/3/a/6. Kattis - busticket.cpp"
        "8/3/a/7. Kattis - protectingthecollection.cpp"
        "8/3/b/1. Kattis - coke.cpp"
        "8/3/b/5. Kattis - companypicnic.cpp"
        "8/3/b/6. Kattis - recursionrandfun.cpp"
        "8/3/b/7. Kattis - rollercoasterfun.cpp"
        "8/3/c/5. Kattis - countcircuits.cpp"
        "8/3/c/6. Kattis - favourable.cpp"
        "8/3/c/7. Kattis - pachinkoprobability.cpp"
        "8/3/d/5. Kattis - hidingchickens.cpp"
        "8/3/d/6. Kattis - narrowartgallery.cpp"
        "8/3/d/7. Kattis - pebblesolitaire2.cpp"
        "8/4/a/5. Kattis - dutyscheduler.cpp"
        "8/4/a/6. Kattis - jupiter.cpp"
        "8/4/a/7. Kattis - mazemovement.cpp"
        "8/4/b/5. Kattis - avoidingtheapocalypse.cpp"
        "8/4/b/6. Kattis - thekingofthenorth.cpp"
        "8/4/b/7. Kattis - transportation.cpp"
        "8/6/a/5. Kattis - flowfree.cpp"
        "8/6/a/6. Kattis - font.cpp"
        "8/6/a/7. Kattis - socialadvertising.cpp"
        "8/6/b/5. Kattis - beanbag.cpp"
        "8/6/b/6. Kattis - busplanning.cpp"
        "8/6/b/7. Kattis - programmingteamselection.cpp"
        "8/6/c/5. Kattis - bilateral.cpp"
        "8/6/c/6. Kattis - europeantrip.cpp"
        "8/6/c/7. Kattis - reactivity.cpp"
        "8/6/d/5. Kattis - jailbreak.cpp"
        "8/6/d/6. Kattis - ridofcoins.cpp"
        "8/6/d/7. Kattis - wedding.cpp"
        "8/7/a/5. Kattis - arrivingontime.cpp"
        "8/7/a/6. Kattis - charlesincharge.cpp"
        "8/7/a/7. Kattis - programmingtutors.cpp"
        "8/7/b/1. Kattis - wifi.cpp"
        "8/7/b/5. Kattis - catandmice.cpp"
        "8/7/b/6. Kattis - enemyterritory.cpp"
        "8/7/b/7. Kattis - gravamen.cpp"
        "8/7/c/1. Kattis - undetected.cpp"
        "8/7/c/5. Kattis - bing.cpp"
        "8/7/c/6. Kattis - busnumbers2.cpp"
        "8/7/c/7. Kattis - selfsimilarstrings.cpp"
        "8/7/d/1. Kattis - dictionaryattack.cpp"
        "8/7/d/5. Kattis - doublets.cpp"
        "8/7/d/6. Kattis - magicallights.cpp"
        "8/7/d/7. Kattis - sparklesseven.cpp"
        "8/7/e/5. Kattis - collidingtraffic.cpp"
        "8/7/e/6. Kattis - cranes.cpp"
        "8/7/e/7. Kattis - doggopher.cpp"
        "8/7/f/1. Kattis - humancannonball.cpp"
        "8/7/f/5. Kattis - findinglines.cpp"
        "8/7/f/6. Kattis - umbraldecoding.cpp"
        "8/7/f/7. Kattis - walkway.cpp"
        "8/7/g/5. Kattis - crowdcontrol.cpp"
        "8/7/g/6. Kattis - gears2.cpp"
        "8/7/g/7. Kattis - gridmst.cpp"
        "8/7/h/1. Kattis - industrialspy.cpp"
        "8/7/h/5. Kattis - emergency.cpp"
        "8/7/h/6. Kattis - megainversions.cpp"
        "8/7/h/7. Kattis - ontrack.cpp"
        "8/7/i/5. Kattis - globalwarming.cpp"
        "8/7/i/6. Kattis - treasurediving.cpp"
        "8/7/i/7. Kattis - walkforest.cpp"
        "8/7/j/5. Kattis - centsavings.cpp"
        "8/7/j/6. Kattis - dvoniz.cpp"
        "8/7/j/7. Kattis - program.cpp"
        "8/7/k/1. Kattis - gettingthrough.cpp"
        "8/7/k/5. Kattis - beeproblem.cpp"
        "8/7/k/6. Kattis - researchproductivityindex.cpp"
        "8/7/k/7. Kattis - shrine.cpp"
        "8/7/l/1. Kattis - artwork.cpp"
        "8/7/l/5. Kattis - carpool.cpp"
        "8/7/l/6. Kattis - clockpictures.cpp"
        "8/7/l/7. Kattis - guessthenumbers.cpp")
